# rocq-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  e2e_test.go  format.go  format_test.go  go.mod  go.sum  integration_test.go  justfile  lsp.go  lsp_test.go  main.go  plan.md  proof.go  rocq-mcp.opam  state.go  tools.go  tools_test.go  types.go  vsrocq.go
.claude/: settings.json
.claude/skills/ci/: SKILL.md
.claude/skills/rocq-build/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
cmd/proof-trace/: main.go
docs/: design.md  todo.md
internal/rocq/: format.go  format_test.go  integration_test.go  lsp.go  lsp_test.go  proof.go  state.go  types.go  vsrocq.go
testdata/: complex_goal_flow.v  diff_goal.v  error.v  mid_proof.v  simple.v  split_goals.v
