opam-version: "2.0"
name: "project"
synopsis: "Rocq MCP server"
maintainer: "Sanjit Bhat <Sanjit.bhat@gmail.com>"
authors: "Sanjit Bhat <Sanjit.bhat@gmail.com>"
license: "MIT"
homepage: "https://github.com/sanjit-bhat/rocq-mcp"
bug-reports: "https://github.com/sanjit-bhat/rocq-mcp/issues"
dev-repo: "git+https://github.com/sanjit-bhat/rocq-mcp.git"
depends: [
    "vsrocq-language-server"
]
